Traffic/80-percent-traffic/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp
  labels:
    app: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: red
    spec:
      containers:
      - name:  myapp
        image: maurifc/sample-app:red
        ports:
        - containerPort:  80
          name:  myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-canary
  labels:
    app: myapp
    version: green
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
        version: green
    spec:
      containers:
      - name:  myapp
        image: maurifc/sample-app:green
        ports:
        - containerPort:  80
          name:  myapp
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
  - name: myapp
    protocol: TCP
    port: 8080
    targetPort: 80
---
